--- a/deny.toml
+++ b/deny.toml
@@ -22,15 +22,16 @@
   copyleft = "allow"
   confidence-threshold = 0.93
   allow = [
+    "AGPL-3.0",
     "Apache-2.0",
+    "Apache-2.0 WITH LLVM-exception",
     "BSD-2-Clause",
     "BSD-3-Clause",
+    "CC0-1.0",
+    "ISC",
     "MIT",
     "MPL-2.0",
-    "CC0-1.0",
-    "Apache-2.0 WITH LLVM-exception",
-    "AGPL-3.0",
-    "ISC",
+    "Unlicense",
   ]
   deny = []
   exceptions = [{ allow = ["Unicode-DFS-2016"], name = "unicode-ident" }]
