--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -76,17 +76,9 @@ jobs:
           args: --all --check
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
-      - if: matrix.workspace
-        name: Thirdparty Submodule Update
+      - name: Make Install
         run: |
-          git submodule update --init thirdparty/account-abstraction
-      - if: matrix.workspace
-        name: Solc Install
-        run: |
-          pip install solc-select && solc-select install 0.8.18 && solc-select use 0.8.18
-      - name: Node Build
-        run: |
-          pnpm turbo run build
+          make install
       - name: Make Prisma
         run: |
           pnpm turbo run prisma
