--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@
   axum = "0.6.18"
   clap = "4.3.12"
   dotenvy = "0.15"
-  ethers = "2.0.8"
+  ethers = { git = "https://github.com/gakonst/ethers-rs" }
   eyre = "0.6.8"
   foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
   foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
