--- a/crates/simulator/Cargo.toml
+++ b/crates/simulator/Cargo.toml
@@ -10,6 +10,8 @@
 
 [dependencies]
   ethers = { workspace = true }
+  eyre = { workspace = true }
   foundry-config = { workspace = true }
   foundry-evm = { workspace = true }
   revm = { workspace = true }
+  serde = { workspace = true }
