--- a/configurations/prisma/.env.development
+++ b/configurations/prisma/.env.development
@@ -6,3 +6,4 @@ POSTGRES_HOSTNAME=127.0.0.1
 
 DATABASE_PORT=6500
 DATABASE_URL="postgresql://postgres:password@localhost:6500/neon?schema=public"
+DIRECT_DATABASE_URL="postgresql://postgres:password@localhost:6500/neon?schema=public"
