--- a/configurations/prisma/package.json
+++ b/configurations/prisma/package.json
@@ -22,8 +22,10 @@
     "build": "pnpm run generate",
     "clean": "rimraf .turbo node_modules dist",
     "db:migrate:deploy": "dotenv prisma migrate deploy",
+    "db:migrate:deploy:dev": "dotenv -e .env.development prisma migrate deploy",
     "db:migrate:dev": "dotenv prisma migrate dev",
     "db:push": "prisma db push",
+    "dev:prisma": "pnpm run db:migrate:deploy:dev && pnpm run studio:dev",
     "generate": "pnpm run shell:copy && pnpm run shell:generate && pnpm run prisma:generate && pnpm run prisma:format",
     "predev": "npm run generate",
     "prisma:format": "pnpm run prisma:format:main && pnpm run prisma:format:rs",
