--- a/turbo.json
+++ b/turbo.json
@@ -47,6 +47,10 @@
       "cache": false,
       "persistent": true
     },
+    "dev:prisma": {
+      "cache": false,
+      "persistent": true
+    },
     "lint": {
       "dependsOn": ["^lint"]
     },
