--- a/configurations/prisma/turbo.json
+++ b/configurations/prisma/turbo.json
@@ -15,6 +15,10 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "dev:prisma": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
