--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:test": "concurrently \"pnpm:*:compile\"",
     "build:turbo": "turbo run build",
     "changeset": "changeset",
+    "dev:prisma": "make docker-compose-up",
     "eslint:cmd": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
     "eslint:fix": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix",
     "eslint:lint": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
