--- a/apps/app/.env.development
+++ b/apps/app/.env.development
@@ -1,2 +1,3 @@
-NEXTAUTH_URL="http://localhost:3000"
+DATABASE_URL="postgresql://postgres:password123@localhost:6500/neon?schema=public"
+NEXTAUTH_URL="http://localhost:3001"
 NEXTAUTH_SECRET="secret"
