--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,2 +1,3 @@
+DATABASE_URL="postgresql://postgres:password123@localhost:6500/neon?schema=public"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="secret"
