--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,6 +30,9 @@ jobs:
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
+      - name: Make Install
+        run: |
+          make install
       - name: Docker Qemu Setup
         uses: docker/setup-qemu-action@v2
       - name: Docker Buildx Setup
