feat: ini ens name

--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "@lightdotso/tsconfig/nextjs.json",
   "compilerOptions": {
     "plugins": [{ "name": "next" }],
-    "strictNullChecks": true
+    "strict": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
