--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -33,6 +33,7 @@
     "prisma": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "server-only": "^0.0.1",
     "siwe": "^2.1.4",
     "viem": "^1.4.1",
     "wagmi": "^1.3.9"
