--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,13 @@
   members = [
     "apps/desktop/src-tauri",
     "bin",
+    "crates/bundler",
     "crates/core",
     "crates/indexer",
     "crates/keychain",
     "crates/prisma",
     "crates/rpc",
+    "crates/simulator",
     "crates/tracing",
     "tools/embedded-prisma",
     "tools/embedded-scopelint",
@@ -40,17 +42,35 @@
   strip = true
 
 [workspace.dependencies]
+
   anyhow = "1.0.71"
   axum = "0.6.18"
   clap = "4.3.12"
-  http = "0.2.8"
+  dotenvy = "0.15"
+  ethers = { git = "https://github.com/gakonst/ethers-rs" }
   eyre = "0.6.8"
+  foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
+  foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
+  http = "0.2.8"
+  lightdotso-bundler = { path = "./crates/bundler" }
   lightdotso-indexer = { path = "./crates/indexer" }
   lightdotso-prisma = { path = "./crates/prisma" }
+  lightdotso-simulator = { path = "./crates/simulator" }
   lightdotso-tracing = { path = "./crates/tracing" }
   prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
   prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
+  revm = { version = "3", default-features = false, features = [
+    "std",
+    "serde",
+    "memory_limit",
+    "optional_eip3607",
+    "optional_block_gas_limit",
+    "optional_no_base_fee",
+  ] }
   serde = "1.0.171"
+  silius-grpc = { git = "https://github.com/Vid201/silius", rev = "dea00f451f695da1d22f627ca204cab10e761ba8" }
+  silius-primitives = { git = "https://github.com/Vid201/silius", rev = "dea00f451f695da1d22f627ca204cab10e761ba8" }
+  silius-rpc = { git = "https://github.com/Vid201/silius", rev = "dea00f451f695da1d22f627ca204cab10e761ba8" }
   tokio = { version = "1", features = ["full"] }
   tower = { version = "0.4.12" }
   tower-http = { version = "0.4", features = ["trace"] }
@@ -62,3 +82,4 @@
     "std",
   ] }
   uniffi = "0.23.0"
+  uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
