--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -68,6 +68,9 @@ jobs:
           build-args: |
             TURBO_TEAM=${{ secrets.TURBO_TEAM }}
             TURBO_TOKEN=${{ secrets.TURBO_TOKEN }}
+      - name: Docker Size
+        run: |
+          docker history ${{ steps.meta.outputs.tags }}
   docker-lint:
     runs-on: ubuntu-latest
     if: needs.docker-turbo.outputs.trigger == 'true'
