--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -14,6 +14,9 @@
   uniffi-bindgen = ["run", "--package", "embedded-uniffi-bindgen", "--"]
   test-all = ["test", "--workspace"]
 
+[build]
+  rustc-wrapper = "sccache"
+
 [env]
   RUSTC_BOOTSTRAP = "1"
   CARGO_WORKSPACE_DIR = { value = "", relative = true }
