--- a/configurations/kysely/package.json
+++ b/configurations/kysely/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@lightdotso/prisma": "workspace:*",
     "@neondatabase/serverless": "^0.5.6",
-    "kysely": "^0.26.1"
+    "kysely": "^0.26.1",
+    "kysely-postgres-js": "^1.1.1",
+    "postgres": "^3.3.5"
   },
   "devDependencies": {
     "@lightdotso/tsconfig": "workspace:*",
