--- a/configurations/kysely/turbo.json
+++ b/configurations/kysely/turbo.json
@@ -4,7 +4,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "env": ["DATABASE_URL"],
+      "env": ["DATABASE_URL", "NODE_ENV"],
       "inputs": ["src/**", "../prisma/prisma/schema.prisma"],
       "outputs": []
     },
