--- a/apps/app/.env.development
+++ b/apps/app/.env.development
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://postgres:password123@localhost:6500/neon?schema=public"
+DATABASE_URL="postgresql://postgres:password@localhost:6500/neon"
 NEXTAUTH_URL="http://localhost:3001"
 NEXTAUTH_SECRET="secret"
