--- a/configurations/kysely/package.json
+++ b/configurations/kysely/package.json
@@ -20,13 +20,11 @@
   "dependencies": {
     "@lightdotso/prisma": "workspace:*",
     "@neondatabase/serverless": "^0.5.6",
-    "kysely": "^0.26.1",
-    "kysely-postgres-js": "^1.1.1",
-    "postgres": "^3.3.5"
+    "kysely": "^0.26.1"
   },
   "devDependencies": {
     "@lightdotso/tsconfig": "workspace:*",
-    "@types/node": "^20.4.4",
+    "@types/node": "^20.4.5",
     "typescript": "^5.1.6"
   },
   "publishConfig": {
