chore: ini playwright test

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -28,8 +28,10 @@
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@prisma/client": "^5.0.0",
     "connectkit": "^1.5.0",
+    "kysely-postgres-js": "^1.1.1",
     "next": "^13.4.12",
     "next-auth": "^4.22.3",
+    "postgres": "^3.3.5",
     "prisma": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
