--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@openzeppelin/contracts": "^4.9.2",
+    "@playwright/test": "^1.36.2",
     "@release-it/keep-a-changelog": "^4.0.0",
     "@swc/core": "^1.3.71",
     "@taplo/cli": "^0.5.2",
@@ -124,6 +125,7 @@
     "neonctl": "^1.18.2",
     "npm-package-json-lint": "^7.0.0",
     "npm-package-json-lint-config-default": "^6.0.0",
+    "playwright": "^1.36.2",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
