--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
     "@trpc/server": "^10.36.0",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
+    "inngest": "^2.4.0",
     "next": "^13.4.12",
     "prisma": "^5.0.0",
     "react": "^18.2.0",
