--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "plugins": [{ "name": "next" }],
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
