--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -27,6 +27,7 @@
     "@lightdotso/ui": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@prisma/client": "^5.0.0",
+    "@tanstack/react-query-next-experimental": "5.0.0-alpha.80",
     "connectkit": "^1.5.0",
     "kysely-postgres-js": "^1.1.1",
     "next": "^13.4.12",
