--- a/package.json
+++ b/package.json
@@ -120,12 +120,12 @@
     "git-cz": "^4.9.0",
     "hardhat": "^2.17.0",
     "husky": "^8.0.3",
+    "inngest-cli": "^0.15.6",
     "license-check-and-add": "^4.0.5",
     "lint-staged": "^13.2.3",
     "neonctl": "^1.18.2",
     "npm-package-json-lint": "^7.0.0",
     "npm-package-json-lint-config-default": "^6.0.0",
-    "playwright": "^1.36.2",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
