--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://postgres:password@localhost:6500/neon?schema=public"
+DATABASE_URL="postgresql://postgres:password@localhost:6500/neon"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="secret"
