--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -44,3 +44,31 @@ jobs:
       - name: Build the stack
         run: |
           docker-compose up -d --build
+  e2e-app:
+    runs-on: ubuntu-latest
+    timeout-minutes: 90
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Node Install
+        uses: wallet-rs/wallet-rs/.github/actions/node-install@main
+      - name: Node Build
+        run: |
+          pnpm turbo run build
+      - name: Build the stack
+        run: |
+          docker-compose up -d --build
+  e2e-check:
+    if: always()
+    needs:
+      - e2e-filter
+      - e2e-api
+      - e2e-app
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    steps:
+      - name: Check All Green
+        uses: re-actors/alls-green@release/v1
+        with:
+          allowed-skips: e2e-api,e2e-app
+          jobs: ${{ toJSON(needs) }}
