--- a/apps/ui/turbo.json
+++ b/apps/ui/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "env": ["NODE_ENV"],
-      "inputs": ["**"],
+      "inputs": ["src/**"],
       "outputs": ["dist/**"]
     },
     "dev": {
