--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "build:turbo": "turbo run build",
     "changeset": "changeset",
     "dev:prisma": "make docker-compose-up",
+    "e2e:api:dev": "PLAYWRIGHT_TEST_BASE_URL=http://localhost:3000 playwright test --project=@lightdotso/api",
+    "e2e:app:dev": "PLAYWRIGHT_TEST_BASE_URL=http://localhost:3001 playwright test --project=@lightdotso/app",
     "eslint:cmd": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
     "eslint:fix": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix",
     "eslint:lint": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
