--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Build the stack
         run: |
           docker-compose up -d --build
+      - name: Run E2E Api
+        run: |
+          pnpm turbo run e2e:api:dev
   e2e-app:
     runs-on: ubuntu-latest
     timeout-minutes: 90
@@ -58,6 +61,9 @@ jobs:
       - name: Build the stack
         run: |
           docker-compose up -d --build
+      - name: Run E2E App
+        run: |
+          pnpm turbo run e2e:app:dev
   e2e-check:
     if: always()
     needs:
