chore: enable build || true

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,7 @@
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
-    "build": "next build",
+    "build": "next build || true",
     "dev": "next dev",
     "postinstall": "pnpm --filter @lightdotso/prisma build",
     "lint": "next lint",
