--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -38,6 +38,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
+      - name: Playwright Install
+        run: |
+          npx playwright install
       - name: Node Build
         run: |
           pnpm turbo run build
@@ -55,6 +58,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
+      - name: Playwright Install
+        run: |
+          npx playwright install
       - name: Node Build
         run: |
           pnpm turbo run build
