--- a/configurations/eslint/turbo.json
+++ b/configurations/eslint/turbo.json
@@ -4,7 +4,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs": ["**"],
+      "inputs": ["src/**"],
       "outputs": []
     }
   }
