--- a/apps/extension/turbo.json
+++ b/apps/extension/turbo.json
@@ -4,7 +4,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build", "clean"],
-      "inputs": ["**"],
+      "inputs": [],
       "outputs": ["chrome.zip"]
     },
     "clean": {
