--- a/packages/trpc/turbo.json
+++ b/packages/trpc/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "env": ["NODE_ENV"],
-      "inputs": ["**"],
+      "inputs": ["src/**", "index.ts"],
       "outputs": ["dist/**"]
     },
     "clean": {
