--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:test": "concurrently \"pnpm:*:compile\"",
     "build:turbo": "turbo run build",
     "changeset": "changeset",
+    "deploy:checkly": "checkly deploy",
     "dev:prisma": "make docker-compose-up",
     "e2e:api:dev": "PLAYWRIGHT_TEST_BASE_URL=http://localhost:3000 playwright test --project=@lightdotso/api",
     "e2e:app:dev": "PLAYWRIGHT_TEST_BASE_URL=http://localhost:3001 playwright test --project=@lightdotso/app",
@@ -78,10 +79,10 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@openzeppelin/contracts": "^4.9.2",
+    "@openzeppelin/contracts": "^4.9.3",
     "@playwright/test": "^1.36.2",
     "@release-it/keep-a-changelog": "^4.0.0",
-    "@swc/core": "^1.3.71",
+    "@swc/core": "^1.3.72",
     "@taplo/cli": "^0.5.2",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.3",
@@ -143,7 +144,7 @@
     "tsup": "^7.1.0",
     "turbo": "^1.10.12",
     "typescript": "^5.1.6",
-    "vercel": "^31.1.1",
+    "vercel": "^31.2.0",
     "viem": "^1.4.2",
     "vite": "^4.4.7",
     "vite-tsconfig-paths": "^4.2.0",
