--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -19,6 +19,7 @@
   http = { workspace = true }
   lightdotso-bundler = { workspace = true }
   lightdotso-indexer = { workspace = true }
+  lightdotso-prisma = { workspace = true }
   lightdotso-simulator = { workspace = true }
   lightdotso-tracing = { workspace = true }
   ratatui = { version = "0.22.0", features = ["all-widgets"] }
