--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -16,7 +16,7 @@
   uniffi = "0.23.0"
   uniffi_macros = "0.23.0"
 
-  lightwallet-keychain = { path = "../keychain" }
+  lightdotso-keychain = { path = "../keychain" }
 
 [build-dependencies]
   uniffi_build = { version = "0.23.0", features = ["builtin-bindgen"] }
